--- a/RNN/RNN notebook.ipynb
+++ b/RNN/RNN notebook.ipynb
@@ -2,9 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/eabg97/miniconda3/lib/python3.6/importlib/_bootstrap.py:219: RuntimeWarning: compiletime version 3.5 of module 'tensorflow.python.framework.fast_tensor_util' does not match runtime version 3.6\n",
+      "  return f(*args, **kwds)\n",
+      "/Users/eabg97/miniconda3/lib/python3.6/site-packages/h5py/__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
+      "  from ._conv import register_converters as _register_converters\n"
+     ]
+    }
+   ],
    "source": [
     "import tensorflow as tf\n",
     "import numpy as np\n",
@@ -13,22 +24,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# loading file\n",
+    "# Loading file\n",
     "filename = \"../sherlock.txt\"\n",
     "raw_text = open(filename).read()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# create mapping of unique chars of integers\n",
+    "# Create mapping of unique chars of integers\n",
     "chars = sorted(set(raw_text))\n",
     "char_to_int = dict((c, i) for i, c in enumerate(chars))\n",
     "int_to_char = dict((i, c) for i, c in enumerate(chars))"
@@ -36,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -49,7 +60,7 @@
     }
    ],
    "source": [
-    "# total sizes\n",
+    "# Total sizes\n",
     "n_chars = len(raw_text)\n",
     "n_vocab = len(chars)\n",
     "print(\"Total characters\", n_chars)\n",
@@ -58,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -70,7 +81,7 @@
     }
    ],
    "source": [
-    "# preparing dataset\n",
+    "# Preparing dataset\n",
     "seq_length = 100\n",
     "dataX = []\n",
     "dataY = []\n",
@@ -80,16 +91,16 @@
     "    dataX.append([char_to_int[char] for char in seq_in])\n",
     "    dataY.append(char_to_int[seq_out])\n",
     "n_patterns = len(dataX)\n",
-    "print(\"Total patters\", n_patterns)"
+    "print(\"Total patterns\", n_patterns)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# reshape X to be [samples, time steps, features]\n",
+    "# Reshape X to be [samples, time steps, features]\n",
     "X = tf.reshape(dataX, (n_patterns, seq_length, 1))\n",
     "X = X / n_vocab\n",
     "\n",
@@ -100,11 +111,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# parameters\n",
+    "# Parameters\n",
     "dataset = n_chars\n",
     "output_dim = n_vocab\n",
     "EPOCHS = 500\n",
@@ -115,22 +126,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# creating the variables of the dataset\n",
+    "# Creating the variables of the dataset\n",
     "dX = tf.placeholder(dtype=tf.float32, shape=[None, seq_length, 1])\n",
     "dY = tf.placeholder(dtype=tf.float32, shape=[None, n_vocab])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# implementing RNN\n",
+    "# Implementing RNN\n",
     "from tensorflow.contrib import rnn\n",
     "def RNN(x, rnn_size=256, dropout=0.2, batch_size=64):\n",
     "    with tf.variable_scope('RNN'):\n",
@@ -146,11 +157,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# implementing Softmax for Output\n",
+    "# Implementing Softmax for Output\n",
     "def softmax(input_, out_dim, scope=None):\n",
     "    with tf.variable_scope(scope or 'softmax'):\n",
     "        W = tf.get_variable('W', [input_.get_shape()[1], out_dim])\n",
@@ -160,39 +171,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 11,
    "metadata": {
     "scrolled": false
    },
    "outputs": [],
    "source": [
-    "# creaing model\n",
+    "# Creating model\n",
     "logits = RNN(dX, batch_size=BATCH_SIZE)\n",
     "result = softmax(logits, output_dim)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 12,
    "metadata": {
     "scrolled": false
    },
    "outputs": [],
    "source": [
-    "# loss\n",
+    "# Loss\n",
     "loss_op = tf.reduce_mean(tf.nn.softmax_cross_entropy_with_logits_v2(logits=result, labels=dY))\n",
     "\n",
-    "# optimizer\n",
+    "# Optimizer\n",
     "optimizer = tf.train.AdamOptimizer(learning_rate=learning_rate).minimize(loss_op)\n",
     "\n",
-    "# accuracy\n",
+    "# Accuracy\n",
     "predictions = tf.equal(tf.argmax(result, 1), tf.argmax(dY, 1))\n",
     "acc = tf.reduce_mean(tf.cast(predictions, tf.float32))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 13,
    "metadata": {
     "scrolled": false
    },
@@ -203,28 +214,16 @@
      "text": [
       "(1000, 100, 1)\n",
       "(1000, 75)\n",
-      "1 500 21.157 0.00018906273053787424 0.004\n",
+      "1 500 21.157 0.0006144538577407431 0.013\n",
       "(1000, 100, 1)\n",
       "(1000, 75)\n",
-      "1 500 20.157 0.0002976633568975893 0.002\n",
+      "1 500 20.157 0.0009426006012985546 0.006\n",
       "(1000, 100, 1)\n",
       "(1000, 75)\n",
-      "1 500 19.157 0.0003654016982033804 0.001\n",
+      "1 500 19.157 0.0015660072172454101 0.011\n",
       "(1000, 100, 1)\n",
       "(1000, 75)\n",
-      "1 500 18.157 0.0004956766221004055 0.002\n",
-      "(1000, 100, 1)\n",
-      "(1000, 75)\n",
-      "1 500 17.157 0.0006411377584934409 0.002\n",
-      "(1000, 100, 1)\n",
-      "(1000, 75)\n",
-      "1 500 16.157 0.0006808194913951825 0.0\n",
-      "(1000, 100, 1)\n",
-      "(1000, 75)\n",
-      "1 500 15.157 0.0007917134373536595 0.001\n",
-      "(1000, 100, 1)\n",
-      "(1000, 75)\n",
-      "1 500 14.157 0.0010595465561945643 0.003\n",
+      "1 500 18.157 0.0020928567847524333 0.008\n",
       "(1000, 100, 1)\n",
       "(1000, 75)\n"
      ]
@@ -236,7 +235,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-94-bfe40e40a610>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     30\u001b[0m             \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbatch_y\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     31\u001b[0m             \u001b[0mloops\u001b[0m \u001b[0;34m-=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 32\u001b[0;31m             \u001b[0m_\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mloss_r\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maccuracy_r\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msess\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrun\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0moptimizer\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mloss_op\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0macc\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfeed_dict\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m{\u001b[0m\u001b[0mdX\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mbatch_x\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdY\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mbatch_y\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     33\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     34\u001b[0m             \u001b[0mloss\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0maccuracy_r\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-13-bfe40e40a610>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     30\u001b[0m             \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbatch_y\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     31\u001b[0m             \u001b[0mloops\u001b[0m \u001b[0;34m-=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 32\u001b[0;31m             \u001b[0m_\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mloss_r\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maccuracy_r\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msess\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrun\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0moptimizer\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mloss_op\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0macc\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfeed_dict\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m{\u001b[0m\u001b[0mdX\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mbatch_x\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdY\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mbatch_y\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     33\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     34\u001b[0m             \u001b[0mloss\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0maccuracy_r\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;32m~/miniconda3/lib/python3.6/site-packages/tensorflow/python/client/session.py\u001b[0m in \u001b[0;36mrun\u001b[0;34m(self, fetches, feed_dict, options, run_metadata)\u001b[0m\n\u001b[1;32m    906\u001b[0m     \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    907\u001b[0m       result = self._run(None, fetches, feed_dict, options_ptr,\n\u001b[0;32m--> 908\u001b[0;31m                          run_metadata_ptr)\n\u001b[0m\u001b[1;32m    909\u001b[0m       \u001b[0;32mif\u001b[0m \u001b[0mrun_metadata\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    910\u001b[0m         \u001b[0mproto_data\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtf_session\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mTF_GetBuffer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrun_metadata_ptr\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;32m~/miniconda3/lib/python3.6/site-packages/tensorflow/python/client/session.py\u001b[0m in \u001b[0;36m_run\u001b[0;34m(self, handle, fetches, feed_dict, options, run_metadata)\u001b[0m\n\u001b[1;32m   1141\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mfinal_fetches\u001b[0m \u001b[0;32mor\u001b[0m \u001b[0mfinal_targets\u001b[0m \u001b[0;32mor\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mhandle\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0mfeed_dict_tensor\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1142\u001b[0m       results = self._do_run(handle, final_targets, final_fetches,\n\u001b[0;32m-> 1143\u001b[0;31m                              feed_dict_tensor, options, run_metadata)\n\u001b[0m\u001b[1;32m   1144\u001b[0m     \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1145\u001b[0m       \u001b[0mresults\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;32m~/miniconda3/lib/python3.6/site-packages/tensorflow/python/client/session.py\u001b[0m in \u001b[0;36m_do_run\u001b[0;34m(self, handle, target_list, fetch_list, feed_dict, options, run_metadata)\u001b[0m\n\u001b[1;32m   1322\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mhandle\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1323\u001b[0m       return self._do_call(_run_fn, feeds, fetches, targets, options,\n\u001b[0;32m-> 1324\u001b[0;31m                            run_metadata)\n\u001b[0m\u001b[1;32m   1325\u001b[0m     \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1326\u001b[0m       \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_do_call\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0m_prun_fn\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mhandle\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfeeds\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfetches\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
@@ -276,8 +275,7 @@
     "            \n",
     "            batch_x = np.array(batch_x)\n",
     "            batch_y = np.array(batch_y)\n",
-    "            print(batch_x.shape)\n",
-    "            print(batch_y.shape)\n",
+    "            \n",
     "            loops -= 1\n",
     "            _, loss_r, accuracy_r = sess.run([optimizer, loss_op, acc], feed_dict={dX: batch_x, dY: batch_y})\n",
     "            \n",
